Display a track map in tracks#show

--- a/app/views/trackpoints/index.html.erb
+++ b/app/views/trackpoints/index.html.erb
@@ -1,8 +1,5 @@
-<%- title @track.log.name -%>
-
-<h1><%= @track.log.name %></h1>
-
-<h2>Track <%= @track.id %></h2>
+<%- title "Track #{@track.id}" -%>
+<h1>Track <%= @track.id %></h1>
 
 <table>
   <tr>
