Updates to plots
o  Remove distance-speed plots as they don’t look well at the moment
o  Support for multiple graphs in one plot in Bikelog.Plot class
o  Provide location information in plot data JSON response

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -9,8 +9,6 @@
     </p>
     <h2>Distance–Elevation Plot</h2>
     <div id="track-distance-elevation-plot"></div>
-    <h2>Distance–Speed Plot</h2>
-    <div id="track-distance-speed-plot"></div>
   </div>
   <div id="track-right-column">
     <div id="track-meta">
@@ -55,17 +53,22 @@
   $(function() {
     setupMap("track-map", "<%= log_track_trackpoints_path(@track.log, @track, :json) %>");
 
-    $.getJSON("<%= distance_elevation_data_log_track_path(@track.log, @track, :json) %>", function(points) {
+    $.getJSON("<%= plot_data_log_track_path(@track.log, @track, :json) %>", function(data) {
+      var distanceElevationData = [];
+
+      data.forEach(function(datum) {
+        distanceElevationData.push([datum.distance, datum.elevation]);
+      });
+
       new Bikelog.Plot({
         container: "track-distance-elevation-plot",
-        points: points
-      }).draw();
-    });
-
-    $.getJSON("<%= distance_speed_data_log_track_path(@track.log, @track, :json) %>", function(points) {
-      new Bikelog.Plot({
-        container: "track-distance-speed-plot",
-        points: points
+        graphs: [
+          {
+            points: distanceElevationData,
+            strokeColor: "green",
+            fill: true
+          }
+        ]
       }).draw();
     });
   });
