--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= javascript_include_tag "rails" %>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <%= javascript_include_tag "map" %>
+    <%= javascript_include_tag "tabs" %>
     <%= csrf_meta_tag %>
   </head>
   <body>
