--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -7,8 +7,12 @@
     <p>
       This track belongs to log <%= link_to @track.log.name, @track.log %>.
     </p>
-    <h2>Distance–Elevation Plot</h2>
-    <div id="track-distance-elevation-plot"></div>
+    <div id="track-tabs" class="tabs">
+      <div id="distance-elevation-plot-tab" class="tab">
+        <h2>Distance–Elevation Plot</h2>
+        <div id="track-distance-elevation-plot"></div>
+      </div>
+    </div>
   </div>
   <div id="track-right-column">
     <div id="track-meta">
