--- a/public/stylesheets/bikelog.css
+++ b/public/stylesheets/bikelog.css
@@ -88,6 +88,48 @@ td.l, th.l {
 	margin: 0 0 30px 0;
 }
 
+.tabs {
+	margin: 20px 0;
+}
+
+.tabs .tab-bar {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.tabs .tab-bar li {
+	color: #777;
+	font-size: 11px;
+	font-weight: bold;
+	text-transform: uppercase;
+	display: inline-block;
+	border: 1px solid #ddd;
+	border-width: 1px 1px 0 0;
+	padding: 8px 10px;
+}
+
+.tabs .tab-bar li:first-child {
+	border-left-width: 1px;
+}
+
+.tabs .tab-bar li:hover {
+	cursor: pointer;
+}
+
+.tabs .tab-bar li.selected {
+	color: green;
+}
+
+.tabs .tab {
+	border: 1px solid #ddd;
+	padding: 10px;
+}
+
+.tabs .tab h2 {
+	display: none;
+}
+
 .log-dialog h1 {
 	color: #fff;
 	font-size: 20px;
@@ -179,13 +221,16 @@ td.l, th.l {
 	height: 400px;
 }
 
-#log-comment {
+#log-tabs {
 	margin: 30px 0;
+}
+
+#log-comment {
 	line-height: 1.6;
 }
 
 #log-distance-elevation-plot {
-	width: 640px;
+	width: 618px;
 	height: 200px;
 }
 
@@ -257,8 +302,12 @@ td.l, th.l {
 	height: 400px;
 }
 
+#track-tabs {
+	margin: 30px 0;
+}
+
 #track-distance-elevation-plot {
-	width: 640px;
+	width: 618px;
 	height: 200px;
 }
 
