--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -62,9 +62,10 @@
     $.getJSON("<%= plot_data_log_track_path(@track.log, @track, :json) %>", function(data) {
       var distanceElevationData = [];
 
-      data.forEach(function(datum) {
+      for (var i = 0; i < data.length; i++) {
+        var datum = data[i];
         distanceElevationData.push([datum.distance, datum.elevation]);
-      });
+      }
 
       new Bikelog.Plot({
         container: "track-distance-elevation-plot",
