--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title><%= yield(:title) %> – Bikelog</title>
+    <script>var Bikelog = {};</script>
     <%= stylesheet_link_tag "bikelog" %>
     <%= javascript_include_tag "jquery-1.5.2.min" %>
     <%= javascript_include_tag "rails" %>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <%= javascript_include_tag "map" %>
-    <%= javascript_include_tag "tabs" %>
+    <%- @javascripts.each do |js| -%>
+      <script type="text/javascript" src="<%= js %>"></script>
+    <%- end if @javascripts -%>
     <%= csrf_meta_tag %>
   </head>
   <body>
