--- a/public/stylesheets/bikelog.css
+++ b/public/stylesheets/bikelog.css
@@ -363,11 +363,30 @@ td.l, th.l {
 	font-weight: normal;
 }
 
-#last-12-months-activity tfoot td {
+#dashboard-activity-left-column {
+	float: left;
+	width: 400px;
+}
+
+#dashboard-activity-right-column {
+	float: right;
+	width: 520px;
+}
+
+#dashboard-last-12-months-activity tfoot td {
 	font-weight: bold;
 	border-bottom: none;
 }
 
-#last-12-months-activity .no-activity td {
+#dashboard-last-12-months-activity .no-activity td {
 	color: #bbb;
+}
+
+#dashboard-activity-distance-plot, #dashboard-activity-duration-plot {
+	width: 520px;
+	height: 200px;
+}
+
+#dashboard-activity-distance-plot {
+	margin-bottom: 20px;
 }
