--- a/public/stylesheets/bikelog.css
+++ b/public/stylesheets/bikelog.css
@@ -432,34 +432,31 @@ td.l, th.l {
 	text-align: right;
 }
 
-#dashboard p {
-	color: #666;
-	font-size: 28px;
-	line-height: 1.6;
-}
-
-#dashboard strong {
-	color: green;
-	font-weight: normal;
-}
-
-#dashboard-activity-left-column {
+#dashboard-stats {
 	float: left;
-	width: 400px;
 }
 
-#dashboard-activity-right-column {
+#dashboard-stats dt {
+	float: left;
+	clear: left;
+	width: 140px;
+	text-align: right;
+	color: green;
+	line-height: 1.5;
+}
+
+#dashboard-stats dd {
+	line-height: 1.5;
+	margin-left: 170px;
+}
+
+#dashboard-stats dt, #dashboard-stats dd {
+	padding: 8px 6px;
+}
+
+#dashboard-activity {
 	float: right;
 	width: 520px;
-}
-
-#dashboard-last-12-months-activity tfoot td {
-	font-weight: bold;
-	border-bottom: none;
-}
-
-#dashboard-last-12-months-activity .no-activity td {
-	color: #bbb;
 }
 
 #dashboard-activity-distance-plot, #dashboard-activity-duration-plot {
@@ -468,5 +465,5 @@ td.l, th.l {
 }
 
 #dashboard-activity-distance-plot {
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 }
