--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -31,31 +31,31 @@
     <div id="track-meta">
       <dl>
         <dt>Start Time</dt>
-        <dd><%= @track.start_time.strftime("%d.%m.%Y %H:%M") %></dd>
+        <dd><%=l @track.start_time, :format => "%d.%m.%Y %H:%M" %></dd>
         <dt>End Time</dt>
-        <dd><%= @track.end_time.strftime("%d.%m.%Y %H:%M") %></dd>
+        <dd><%=l @track.end_time, :format => "%d.%m.%Y %H:%M" %></dd>
         <dt>Moving Time</dt>
         <dd><%=format_duration @track.moving_time %></dd>
         <dt>Stopped Time</dt>
         <dd><%=format_duration @track.stopped_time %></dd>
         <dt>Duration</dt>
-        <dd><%= format_duration(@track.duration) %></dd>
+        <dd><%=format_duration @track.duration %></dd>
         <dt>Distance</dt>
-        <dd><%= format_distance(@track.distance) %></dd>
+        <dd><%=format_distance @track.distance %></dd>
         <dt>Overall Avg. Speed</dt>
         <dd><%=format_speed @track.overall_average_speed %></dd>
         <dt>Moving Avg. Speed</dt>
         <dd><%=format_speed @track.moving_average_speed %></dd>
         <dt>Max. Speed</dt>
-        <dd><%= format_speed(@track.max_speed) %></dd>
+        <dd><%=format_speed @track.max_speed %></dd>
         <dt>Ascent</dt>
-        <dd><%= format_elevation(@track.ascent) %></dd>
+        <dd><%=format_elevation @track.ascent %></dd>
         <dt>Descent</dt>
-        <dd><%= format_elevation(@track.descent) %></dd>
+        <dd><%=format_elevation @track.descent %></dd>
         <dt>Min. Elevation</dt>
-        <dd><%= format_elevation(@track.min_elevation) %></dd>
+        <dd><%=format_elevation @track.min_elevation %></dd>
         <dt>Max. Elevation</dt>
-        <dd><%= format_elevation(@track.max_elevation) %></dd>
+        <dd><%=format_elevation @track.max_elevation %></dd>
       </dl>
     </div>
     <div id="track-actions">
