--- a/public/stylesheets/bikelog.css
+++ b/public/stylesheets/bikelog.css
@@ -58,6 +58,14 @@ td.l, th.l {
 	text-align: left;
 }
 
+input[type="text"] {
+	font-size: 14px;
+	font-family: sans-serif;
+	padding: 6px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+}
+
 .clear {
 	clear: both;
 }
@@ -130,6 +138,48 @@ td.l, th.l {
 	display: none;
 }
 
+.site-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	z-index: 1000;
+	background-color: rgba(255, 255, 255, .8);
+}
+
+.site-overlay .box {
+	border-radius: 6px;
+	background-color: green;
+	-webkit-box-shadow: 0 0 6px #ccc;
+	-moz-box-shadow: 0 0 6px #ccc;
+	box-shadow: 0 0 6px #ccc;
+	margin: 200px auto 0;
+	padding: 5px;
+}
+
+.site-overlay .box h2 {
+	color: #fff;
+	margin: 5px 0 10px 5px;
+	font-size: 16px;
+	line-height: 16px;
+}
+
+.site-overlay .close {
+	float: right;
+	margin: 0 6px 0 0;
+	color: #fff;
+	font-size: 18px;
+	cursor: pointer;
+}
+
+.site-overlay .box .content {
+	background-color: #fff;
+	border-radius: 3px;
+	margin: 0;
+	padding: 10px;
+}
+
 .log-dialog h1 {
 	color: #fff;
 	font-size: 20px;
@@ -174,12 +224,7 @@ td.l, th.l {
 }
 
 .log-dialog input[type="text"] {
-	font-size: 14px;
-	font-family: sans-serif;
-	padding: 6px;
 	width: 500px;
-	border: 1px solid #ddd;
-	border-radius: 4px;
 }
 
 .log-dialog textarea {
@@ -430,6 +475,18 @@ td.l, th.l {
 #track-actions li {
 	margin: 6px 0;
 	text-align: right;
+}
+
+#track-rename-pane {
+	display: none;
+}
+
+#track-rename-pane .box {
+	width: 500px;
+}
+
+#track-rename-pane input[type="text"] {
+	width: 466px;
 }
 
 #dashboard-stats {
