Just call it Elevation Profile

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -22,7 +22,7 @@
     </p>
     <div id="track-tabs" class="tabs">
       <div id="distance-elevation-plot-tab" class="tab">
-        <h2>Distance–Elevation Plot</h2>
+        <h2>Elevation Profile</h2>
         <div id="track-distance-elevation-plot"></div>
       </div>
     </div>
