--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -1,9 +1,7 @@
 <%- title "Track #{@track.id}" -%>
 
-<%- add_js "http://maps.google.com/maps/api/js?sensor=false" -%>
-<%- add_js "highcharts.js", "bikelog/highcharts-theme.js" -%>
-<%- add_js "bikelog/tabs.js", "bikelog/douglas-peucker.js" -%>
-<%- add_js "bikelog/map.js", "bikelog/distance-elevation-plot.js" -%>
+<%= javascript_include_tag "http://maps.google.com/maps/api/js?sensor=false" %>
+<%= javascript_include_tag "tracks" %>
 
 <script>
   $(function() {
