Split stylesheets into multiple files

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,526 +1,4 @@
-html {
-	color: #333;
-	font: normal 14px sans-serif;
-}
-
-body {
-	width: 940px;
-	margin: 30px auto;
-}
-
-:focus {
-	outline: none;
-}
-
-h1 {
-	font-size: 26px;
-}
-
-h2 {
-	font-size: 18px;
-	margin: 60px 0 20px;
-}
-
-a {
-	color: green;
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-table {
-	width: 100%;
-	border-collapse: collapse;
-}
-
-td, th {
-	font-size: 13px;
-	border-bottom: 1px solid #ddd;
-	padding: 6px;
-}
-
-th {
-	color: green;
-	border-bottom-width: 2px;
-}
-
-td.r, th.r {
-	text-align: right;
-}
-
-td.c, th.c {
-	text-align: center;
-}
-
-td.l, th.l {
-	text-align: left;
-}
-
-input[type="text"] {
-	font-size: 14px;
-	font-family: sans-serif;
-	padding: 6px;
-	border: 1px solid #ddd;
-	border-radius: 4px;
-}
-
-.clear {
-	clear: both;
-}
-
-#header {
-	margin: 0 0 40px;
-}
-
-#header ol {
-	list-style: none;
-	padding: 0;
-}
-
-#header li {
-	display: inline;
-	margin-right: 20px;
-}
-
-#header li a {
-	font-weight: bold;
-	font-size: 16px;
-}
-
-#flash-error {
-	color: #c00;
-	border: 2px solid #c00;
-	padding: 10px 15px;
-	margin: 0 0 30px 0;
-}
-
-.tabs {
-	margin: 20px 0;
-}
-
-.tabs .tab-bar {
-	list-style: none;
-	padding: 0;
-	margin: 0;
-}
-
-.tabs .tab-bar li {
-	color: #777;
-	font-size: 11px;
-	font-weight: bold;
-	text-transform: uppercase;
-	display: inline-block;
-	border: 1px solid #ddd;
-	border-width: 1px 1px 0 0;
-	padding: 8px 10px;
-}
-
-.tabs .tab-bar li:first-child {
-	border-left-width: 1px;
-}
-
-.tabs .tab-bar li:hover {
-	cursor: pointer;
-}
-
-.tabs .tab-bar li.selected {
-	color: green;
-}
-
-.tabs .tab {
-	border: 1px solid #ddd;
-	padding: 10px;
-}
-
-.tabs .tab h2 {
-	display: none;
-}
-
-.site-overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	z-index: 1000;
-	background-color: rgba(255, 255, 255, .8);
-}
-
-.site-overlay .box {
-	border-radius: 6px;
-	background-color: green;
-	-webkit-box-shadow: 0 0 6px #ccc;
-	-moz-box-shadow: 0 0 6px #ccc;
-	box-shadow: 0 0 6px #ccc;
-	margin: 200px auto 0;
-	padding: 5px;
-}
-
-.site-overlay .box h2 {
-	color: #fff;
-	margin: 5px 0 10px 5px;
-	font-size: 16px;
-	line-height: 16px;
-}
-
-.site-overlay .close {
-	float: right;
-	margin: 0 6px 0 0;
-	color: #fff;
-	font-size: 18px;
-	cursor: pointer;
-}
-
-.site-overlay .box .content {
-	background-color: #fff;
-	border-radius: 3px;
-	margin: 0;
-	padding: 10px;
-}
-
-.log-dialog h1 {
-	color: #fff;
-	font-size: 20px;
-	background-color: green;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
-	padding: 15px 30px;
-	margin: 0 0 1px 0;
-}
-
-.log-dialog .row {
-	background-color: #fff;
-	padding: 10px 0;
-	margin: 2px 0;
-}
-
-.log-dialog .row.button {
-	padding: 10px 0 10px 115px;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-}
-
-.log-dialog .label {
-	float: left;
-	width: 90px;
-	padding: 8px 0 0 0;
-}
-
-.log-dialog .label p.markdown {
-	color: #666;
-	font-size: 11px;
-	line-height: 1.4;
-}
-
-.log-dialog .field {
-	margin: 0 0 0 120px;
-}
-
-.log-dialog .field .track-help {
-	color: #666;
-	font-size: 12px;
-}
-
-.log-dialog input[type="text"] {
-	width: 500px;
-}
-
-.log-dialog textarea {
-	font-size: 14px;
-	font-family: sans-serif;
-	padding: 6px;
-	width: 500px;
-	border: 1px solid #ddd;
-	border-radius: 4px;
-	height: 200px;
-}
-
-.log-dialog input[type="submit"] {
-	color: #fff;
-	font-family: sans-serif;
-	font-size: 14px;
-	font-weight: bold;
-	padding: 6px 20px;
-	background-color: green;
-	border: none;
-	border-radius: 6px;
-}
-
-.log-dialog .row.track-file .label {
-	padding-top: 3px;
-}
-
-#log-left-column {
-	float: left;
-	width: 640px;
-}
-
-#log-right-column {
-	float: right;
-	width: 260px;
-}
-
-#log-map {
-	height: 400px;
-}
-
-#log-tabs {
-	margin: 30px 0;
-}
-
-#log-comment {
-	line-height: 1.6;
-}
-
-#log-distance-elevation-plot {
-	width: 618px;
-	height: 250px;
-}
-
-#log-meta {
-	color: #555;
-	font-size: 13px;
-}
-
-#log-meta dl {
-	border-top: 1px solid #ddd;
-	margin: 0;
-}
-
-#log-meta dt {
-	float: left;
-	clear: left;
-	border-bottom: 1px solid #ddd;
-	font-weight: bold;
-}
-
-#log-meta dd {
-	text-align: right;
-	border-bottom: 1px solid #ddd;
-}
-
-#log-meta dt, #log-meta dd {
-	padding: 8px 6px;
-}
-
-#log-actions {
-	font-size: 12px;
-	margin: 40px 0 0 0;
-}
-
-#log-actions ol {
-	list-style: none;
-	padding: 0;
-}
-
-#log-actions li {
-	margin: 6px 0;
-	text-align: right;
-}
-
-#log-tracks-table {
-	width: 100%;
-}
-
-#logs-navigation {
-	font-size: 13px;
-	margin: 30px 0;
-}
-
-#logs-navigation .next {
-	float: right;
-}
-
-#logs-no-logs {
-	color: #888;
-	font-size: 20px;
-	margin: 50px 0;
-}
-
-.logs-month {
-	margin: 20px 0;
-	background-color: #eee;
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
-	-webkit-border-top-left-radius: 5px;
-	-webkit-border-bottom-left-radius: 5px;
-	-moz-border-radius-topleft: 5px;
-	-moz-border-radius-bottomleft: 5px;
-}
-
-.logs-month-box {
-	float: left;
-	width: 150px;
-	color: #888;
-	font-size: 18px;
-	text-transform: uppercase;
-	padding: 10px;
-}
-
-.logs-month-box .year {
-	font-size: 14px;
-	margin-top: 3px;
-}
-
-.logs-month-logs {
-	float: right;
-	width: 770px;
-	background-color: #fff;
-}
-
-.logs-month-logs table th {
-	color: #888;
-	font-weight: normal;
-	background-color: #eee;
-	border-bottom-width: 1px;
-}
-
-.logs-month-logs table td, .logs-month-logs table th {
-	border-color: #eee;
-}
-
-.logs-month-logs table tfoot td {
-	font-weight: bold;
-}
-
-#logs-total {
-	background-color: #eee;
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
-	-webkit-border-top-left-radius: 5px;
-	-webkit-border-bottom-left-radius: 5px;
-	-moz-border-radius-topleft: 5px;
-	-moz-border-radius-bottomleft: 5px;
-	padding: 10px;
-}
-
-#logs-total span {
-	color: #888;
-	font-size: 18px;
-	text-transform: uppercase;
-}
-
-#logs-total .duration, #logs-total .distance {
-	float: right;
-	text-align: right;
-	font-weight: bold;
-	line-height: 18px;
-}
-
-#logs-total .distance {
-	width: 108px;
-}
-
-#track-left-column {
-	float: left;
-	width: 640px;
-}
-
-#track-right-column {
-	float: right;
-	width: 260px;
-}
-
-#track-map {
-	height: 400px;
-}
-
-#track-tabs {
-	margin: 30px 0;
-}
-
-#track-distance-elevation-plot {
-	width: 618px;
-	height: 250px;
-}
-
-#track-meta {
-	color: #555;
-	font-size: 13px;
-}
-
-#track-meta dl {
-	border-top: 1px solid #ddd;
-	margin: 0;
-}
-
-#track-meta dt {
-	float: left;
-	clear: left;
-	border-bottom: 1px solid #ddd;
-	font-weight: bold;
-}
-
-#track-meta dd {
-	text-align: right;
-	border-bottom: 1px solid #ddd;
-}
-
-#track-meta dt, #track-meta dd {
-	padding: 8px 6px;
-}
-
-#track-actions {
-	font-size: 12px;
-	margin: 40px 0 0 0;
-}
-
-#track-actions ol {
-	list-style: none;
-	padding: 0;
-}
-
-#track-actions li {
-	margin: 6px 0;
-	text-align: right;
-}
-
-#track-rename-pane {
-	display: none;
-}
-
-#track-rename-pane .box {
-	width: 500px;
-}
-
-#track-rename-pane input[type="text"] {
-	width: 466px;
-}
-
-#dashboard-stats {
-	float: left;
-}
-
-#dashboard-stats dt {
-	float: left;
-	clear: left;
-	width: 140px;
-	text-align: right;
-	color: green;
-	line-height: 1.5;
-}
-
-#dashboard-stats dd {
-	line-height: 1.5;
-	margin-left: 170px;
-}
-
-#dashboard-stats dt, #dashboard-stats dd {
-	padding: 8px 6px;
-}
-
-#dashboard-activity {
-	float: right;
-	width: 520px;
-}
-
-#dashboard-activity-distance-plot, #dashboard-activity-duration-plot {
-	width: 520px;
-	height: 200px;
-}
-
-#dashboard-activity-distance-plot {
-	margin-bottom: 30px;
-}
+/*= require site
+ *= require dashboard
+ *= require logs
+ *= require tracks */
